[gd_scene load_steps=14 format=3 uid="uid://ktldeh3np2bx"]

[ext_resource type="Script" path="res://Scripts/mainmenu.gd" id="1_ihmdl"]
[ext_resource type="Texture2D" uid="uid://b7mmalnuxhxwd" path="res://Assets/raw_images/coliseum.jpg" id="2_7t4v4"]
[ext_resource type="StyleBox" uid="uid://domd02ckk76j6" path="res://Assets/buttonstyles/red.tres" id="3_6ln62"]
[ext_resource type="StyleBox" uid="uid://bidvp2uocmc0b" path="res://Assets/buttonstyles/yellow.tres" id="4_8n5yp"]
[ext_resource type="Texture2D" uid="uid://dclsn7fky87nk" path="res://Assets/raw_images/village.jpg" id="4_l2jkq"]
[ext_resource type="StyleBox" uid="uid://4xvi5814f64n" path="res://Assets/buttonstyles/black.tres" id="5_u6wiv"]
[ext_resource type="Texture2D" uid="uid://bgxjse15ia4bn" path="res://Assets/raw_images/doheny.jpg" id="6_140t4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsfqi"]
bg_color = Color(0.661881, 0.00203715, 0.0021692, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x611i"]
bg_color = Color(0.598718, 0.00161765, 0.00173044, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dclth"]
bg_color = Color(0.839937, 0.649057, 0.0720604, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jybj7"]
bg_color = Color(0.664485, 0.510985, 0.046534, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hte4"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v51wj"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ihmdl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 656.0
color = Color(0.495509, 0.495509, 0.495509, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 100)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 448.0
offset_bottom = 320.0
texture = ExtResource("2_7t4v4")
expand_mode = 1

[node name="Level1" type="Button" parent="ScrollContainer/HBoxContainer/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 384.0
offset_right = 448.0
offset_bottom = 512.0
theme_override_styles/hover = SubResource("StyleBoxFlat_vsfqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x611i")
theme_override_styles/normal = ExtResource("3_6ln62")
text = "LEVEL 1
The Coliseum"

[node name="ColorRect2" type="ColorRect" parent="ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 100)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/ColorRect2"]
layout_mode = 0
offset_left = 60.0
offset_top = 128.0
offset_right = 444.0
offset_bottom = 320.0
texture = ExtResource("4_l2jkq")
expand_mode = 1

[node name="Level2" type="Button" parent="ScrollContainer/HBoxContainer/ColorRect2"]
layout_mode = 0
offset_left = 60.0
offset_top = 384.0
offset_right = 444.0
offset_bottom = 512.0
theme_override_styles/hover = SubResource("StyleBoxFlat_dclth")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jybj7")
theme_override_styles/normal = ExtResource("4_8n5yp")
text = "LEVEL 2
The Village"

[node name="ColorRect3" type="ColorRect" parent="ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 100)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/ColorRect3"]
layout_mode = 0
offset_left = 56.0
offset_top = 128.0
offset_right = 440.0
offset_bottom = 320.0
texture = ExtResource("6_140t4")
expand_mode = 1

[node name="Level3" type="Button" parent="ScrollContainer/HBoxContainer/ColorRect3"]
layout_mode = 0
offset_left = 56.0
offset_top = 384.0
offset_right = 440.0
offset_bottom = 512.0
theme_override_styles/hover = SubResource("StyleBoxFlat_4hte4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v51wj")
theme_override_styles/normal = ExtResource("5_u6wiv")
text = "LEVEL 3
Doheny Library"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 1152.0
offset_bottom = 96.0
text = "LEVEL SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 448.0
offset_top = 560.0
offset_right = 704.0
offset_bottom = 591.0
text = "Quit"

[connection signal="button_up" from="ScrollContainer/HBoxContainer/ColorRect/Level1" to="." method="_on_level_1_button_up"]
[connection signal="button_up" from="ScrollContainer/HBoxContainer/ColorRect2/Level2" to="." method="_on_level_2_button_up"]
[connection signal="button_up" from="ScrollContainer/HBoxContainer/ColorRect3/Level3" to="." method="_on_level_3_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
